<resources>
    <string name="app_name">安全卫士</string>
    <string name="url_server">http://192.168.106.2:8080/updateinfo.html</string>
    <string name="net_wrong">服务器错误，请稍后重试！</string>
    <string name="update_fail">服务器错误，无法获取更新，请稍后重试！</string>

    <!--首页ActionBarDrawerToggle-->
    <string name="open">打开</string>
    <string name="close">关闭</string>

    <!-- 管理中心 -->
    <string name="manage_center_contact_assistant">通信助手</string>
    <string name="manage_center_find_app">淘应用</string>
    <string name="manage_center_privacy_protect">隐私保护</string>
    <string name="manage_center_favorite">缓存清理</string>
    <string name="manage_center_apk_manage">安装包清理</string>
    <string name="manage_center_installed_backup">百宝箱</string>
    <string name="manage_center_meizhi">福利</string>
    <string name="manage_center_google">谷歌检测</string>
    <string name="manage_center_setting">设置</string>

    <string name="select_contact">选择联系人</string>
    <string name="setup_safe_protect">安全防盗</string>
    <string name="safe_soft_black_number">黑名单管理</string>

    <!-- 首页功能 -->
    <string name="safe_lost_find">手机防盗</string>
    <string name="safe_anti_virus">手机杀毒</string>
    <string name="safe_task_manager">进程管理</string>
    <string name="safe_soft_manager">应用管理</string>

    <string name="title_activity_setting">设置</string>
    <string name="setting_auto_update">自动检测更新</string>
    <string name="setting_location">来电归属地显示</string>
    <string name="setting_black_number">通信拦截</string>
    <string name="setting_app_lock">隐私保护</string>
    <string name="setting_toast_id">归属地提示框</string>

    <!--setting menu-->
    <string name="menu_share">分享</string>
    <string name="menu_about_me">关于我</string>
    <string name="menu_about_app">关于App</string>
    <string name="menu_mode">切换主题</string>
    <string name="query_location">归属地查询</string>
    <string name="query_common">常用号码查询</string>
    <string name="query_sms_back">短信备份</string>

</resources>
