<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:title="@string/title_activity_setting">
    <PreferenceCategory
        android:layout="@layout/preference_category_widget"
        android:title="基本设置">
        <CheckBoxPreference
            android:key="@string/setting_auto_update"
            android:layout="@layout/preference_item"
            android:summary="自动更新已关闭"
            android:title="@string/setting_auto_update"
            android:widgetLayout="@layout/switch_layout"/>
        <CheckBoxPreference
            android:key="@string/setting_location"
            android:layout="@layout/preference_item"
            android:summary="来电归属地显示已关闭"
            android:title="@string/setting_location"
            android:widgetLayout="@layout/switch_layout"/>
        <CheckBoxPreference
            android:key="@string/setting_black_number"
            android:layout="@layout/preference_item"
            android:summary="通信拦截已关闭"
            android:title="@string/setting_black_number"
            android:widgetLayout="@layout/switch_layout"/>
        <CheckBoxPreference
            android:key="@string/setting_app_lock"
            android:layout="@layout/preference_item"
            android:summary="隐私保护已关闭"
            android:title="@string/setting_app_lock"
            android:widgetLayout="@layout/switch_layout"/>
        <Preference
            android:key="@string/setting_toast_id"
            android:layout="@layout/preference_item"
            android:title="@string/setting_toast_id"
            android:summary="半透明"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/preference_category_widget"
        android:title="版本信息">
        <Preference
            android:layout="@layout/preference_item"
            android:summary="V 1.0"
            android:title="当前版本" />
        <Preference
            android:layout="@layout/preference_item"
            android:summary="邮箱：zurich37@sina.com"
            android:title="zurich" />
    </PreferenceCategory>

</PreferenceScreen>