<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--顶部分数-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorPrimary"
        android:gravity="center_horizontal">

        <RelativeLayout
            android:id="@+id/rl_safe_score"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="20dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.7"
                android:padding="15dp"
                android:src="@drawable/safe_circle_bg" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.8"
                android:src="@drawable/safe_circle_white_bg" />

            <TextView
                android:id="@+id/tv_safe_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:includeFontPadding="false"
                android:text="100"
                android:textColor="@color/colorPrimary"
                android:textSize="45dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/tv_safe_score"
                android:paddingTop="5dp"
                android:text="分"
                android:textColor="#999797"
                android:textSize="18dp"
                android:textStyle="bold" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_safe_lost_find"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/ripple_button_bg"
            android:gravity="center"
            android:text="@string/safe_lost_find"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_safe_anti_virus"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/ripple_button_bg"
            android:gravity="center"
            android:text="@string/safe_anti_virus"
            android:textSize="18dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_task_manager"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/ripple_button_bg"
            android:gravity="center"
            android:text="@string/safe_task_manager"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_soft_manager"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/ripple_button_bg"
            android:gravity="center"
            android:text="@string/safe_soft_manager"
            android:textSize="18dp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>